--- a/front/src/styles/item-card.scss
+++ b/front/src/styles/item-card.scss
@@ -44,8 +44,10 @@
     }
 
     .favorite {
+      margin-top: 5px;
       margin-right: 3vw;
-      width: 5vw;
+      min-width: 25px;
+      min-height: auto;
     }
 
   }
