--- a/front/src/styles/header.scss
+++ b/front/src/styles/header.scss
@@ -26,7 +26,7 @@ $logoHeight: 3.5vh;
     position: relative;
     margin: 0;
     height: $logoHeight;
-    width: $logoHeight*5.5;
+    width: calc($logoHeight*5.5);
   }
 
 }
@@ -46,8 +46,8 @@ $logoHeight: 3.5vh;
 
   .cart {
     position: relative;
-    height: $logoHeight*1.1;
-    width: $logoHeight*1.1;
+    height: calc($logoHeight*1.1);
+    width: calc($logoHeight*1.1);
     margin-bottom: 3px;
   }
 
